welcome.lessons.welcome.array.array123.Array123.scala.error
array123:5: error: ambiguous reference to overloaded definition,
both method & in class Int of type (x: Char)Int
and  method & in class Int of type (x: Short)Int
match expected type ?
	if ( nums(i)=1  & nums(i+1)=2 & nums(i+2)=3 ){
                        ^